kubernetes/namespaces/default/dns-over-https/manifest.yml
###############################################################################
# Configuration file for DNSCrypt-Proxy
#
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dns-over-https
  namespace: default
  labels:
    # The name of the application
    app.kubernetes.io/name: dns-over-https
    # The component within the architecture
    app.kubernetes.io/component: dns
    # The name of a higher level application this one is part of
    app.kubernetes.io/part-of: network-services
spec:
  replicas: 2
  selector:
    matchLabels:
      # The name of the application
      app.kubernetes.io/name: dns-over-https
      # The component within the architecture
      app.kubernetes.io/component: dns
      # The name of a higher level application this one is part of
      app.kubernetes.io/part-of: network-services
  template:
    metadata:
      labels:
        # The name of the application
        app.kubernetes.io/name: dns-over-https
        # The component within the architecture
        app.kubernetes.io/component: dns
        # The name of a higher level application this one is part of
        app.kubernetes.io/part-of: network-services
    spec:
      #
      # *** Pods distribution strategy ***
      #
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              # The name of the application
              app.kubernetes.io/name: dns-over-https
              # The component within the architecture
              app.kubernetes.io/component: dns
              # The name of a higher level application this one is part of
              app.kubernetes.io/part-of: network-services
      #
      # *** Containers specifications ***
      #
      containers:
        #
        # *** dnscrypt-proxy ***
        #
        # A flexible DNS proxy, with support for modern encrypted DNS protocols
        # such as DNSCrypt v2, DNS-over-HTTPS, Anonymized DNSCrypt and ODoH
        # (Oblivious DoH).
        #
        - name: dnscrypt-proxy
          image: gists/dnscrypt-proxy:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5353
              protocol: TCP
            - containerPort: 5353
              protocol: UDP
          volumeMounts:
            - mountPath: /etc/dnscrypt-proxy/dnscrypt-proxy.toml
              name: dnscrypt-proxy-config
              subPath: dnscrypt-proxy.toml
              readOnly: true
          livenessProbe:
            exec:
              command:
                - nslookup
                - -po=5353
                - cloudflare.com
                - '127.0.0.1'
            initialDelaySeconds: 120
            timeoutSeconds: 5
            failureThreshold: 10
          resources:
            limits:
              cpu: 100m
              memory: 50Mi
            requests:
              cpu: 10m
              memory: 25Mi
        #
        # *** Pi-hole ***
        #
        # The Pi-hole® is a DNS sinkhole that protects your devices from
        # unwanted content, without installing any client-side software.
        #
        - name: pihole
          image: pihole/pihole:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
            - containerPort: 53
              protocol: TCP
            - containerPort: 53
              protocol: UDP
          volumeMounts:
            - mountPath: /etc/dnsmasq.d
              name: pvc
              subPath: dnsmasq.d
            - mountPath: /etc/pihole
              name: pvc
              subPath: pihole
          livenessProbe:
            httpGet:
              path: /admin/index.php
              port: 80
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 5
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /admin/index.php
              port: 80
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            limits:
              cpu: 500m
              memory: 300Mi
            requests:
              cpu: 50m
              memory: 150Mi
      #
      # *** Volume specifications ***
      #
      volumes:
        - name: dnscrypt-proxy-config
          configMap:
            name: dnscrypt-proxy
        - name: pihole-dnsmasqd-config
          configMap:
            name: pihole-dnsmasqd
  volumeClaimTemplates:
    - metadata:
        name: pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: csi-nfs-storage
        resources:
          requests:
            storage: 256Mi
###############################################################################
# Load balancer configuration for the entire service
#
---
apiVersion: v1
kind: Service
metadata:
  name: dns-over-https
  namespace: default
  labels:
    # The name of the application
    app.kubernetes.io/name: dns-over-https
    # The component within the architecture
    app.kubernetes.io/component: dns
    # The name of a higher level application this one is part of
    app.kubernetes.io/part-of: network-services
spec:
  selector:
    # The name of the application
    app.kubernetes.io/name: dns-over-https
    # The component within the architecture
    app.kubernetes.io/component: dns
    # The name of a higher level application this one is part of
    app.kubernetes.io/part-of: network-services
  type: LoadBalancer
  loadBalancerIP: ${METALLB_PIHOLE_IP_ADDR}
  externalTrafficPolicy: Local # required to keep track of client source IP
  ports:
    - name: dns1
      protocol: TCP
      port: 53
    - name: dns2
      protocol: UDP
      port: 53
###############################################################################
# Cluster IP configuration for Pi-Hole
#
---
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: default
  labels:
    # The name of the application
    app.kubernetes.io/name: dns-over-https
    # The component within the architecture
    app.kubernetes.io/component: dns
    # The name of a higher level application this one is part of
    app.kubernetes.io/part-of: network-services
spec:
  selector:
    # The name of the application
    app.kubernetes.io/name: dns-over-https
    # The component within the architecture
    app.kubernetes.io/component: dns
    # The name of a higher level application this one is part of
    app.kubernetes.io/part-of: network-services
  type: ClusterIP
  ports:
    - name: pihole
      protocol: TCP
      port: 80
###############################################################################
# Ingress route configuration for Pi-Hole
#
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pihole
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
  labels:
    # The name of the application
    app.kubernetes.io/name: dns-over-https
    # The component within the architecture
    app.kubernetes.io/component: dns
    # The name of a higher level application this one is part of
    app.kubernetes.io/part-of: network-services
spec:
  entryPoints:
    - websecure
  tls: {}
  routes:
    - match: Host(`${PIHOLE_DOMAIN}`) && PathPrefix(`/admin`)
      kind: Rule
      services:
        - name: pihole
          namespace: default
          port: pihole
          sticky:
            cookie:
              httpOnly: true
              name: cookie
              secure: true
              sameSite: none
